src/test/resources/semantic/sentences/correct/TC_CREATE_ARRAY.ru
/? 
struct A{

}

impl A{
    .(){
    }
    fn m1(Int num1)->Array Int{
        ret new Int[10];
    }
}

start{
}
