src/test/resources/semantic/sentences/error/TC_ERROR_RETURN_METHOD7.ru
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 12 | COLUMNA 9 | Se esperaba un tipo de retorno Str. |
struct A{

}

impl A{
    .(){
    }
    fn m1(Int num1)->Str{
        ret nil;
    }
}

struct B{

}

impl B{
    .(){}
}

struct C{

}

impl C{
    .(){}
}
start{
}
